--- a/Aula-10/index.html
+++ b/Aula-10/index.html
@@ -7,7 +7,7 @@
     <title>Aula 10.1</title>
 </head>
 <body>
-    <h1>Aula 10.1</h1>
+    <h1>Exercícios Aula 10.1</h1>
     
     <script src="js/script.js"></script>
 </body>
